# hagamesai

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
api/: ai.py  auth.py  games.py  llm.py  llm_service.py  llm_service_utils.py  tasks.py  test_llm.py  users.py
api/routers/: ai_engine.py
core/: auth.py  auth_utils.py  celery_app.py  database.py  llm_processing.py  llm_utilities.py  logging.py  tasks.py
core/ai_engine/: __init__.py  ai_processing.py  ai_utilities.py  base.py  cognitive.py  cognitive_functions.py  collective.py  collective_intelligence.py  llm_utils.py  prediction.py  quantum.py  utils.py  xai.py
crud/: ai_model.py  cognitive_profile.py  game_definition.py  game_instance.py  user.py
docs/: ai_engine.md  ai_engine_integration_guide.md  ai_engine_processing.md  ai_engine_utils.md  api_overview.md  api_reference.md  game_management.md  llm_api_documentation.md  llm_integration_guide.md  llm_service.md  roadmap.md  usage_guide.md  user_management_guide.md  user_profile_management.md
llm_service/: README.md  architecture.md  configuration.md  crud.py  faq.md  models.py  schemas.py  service.py  test_ai_engine_service.py  test_llm_service.py  test_llm_service_integration.py  test_service.py  usage_examples.md
models/: ai_model.py  cognitive_profile.py  game_definition.py  game_instance.py  user.py
schemas/: ai_engine.py  ai_model.py  cognitive_profile.py  game_definition.py  game_instance.py  llm_request.py  llm_response.py  task.py  user.py  user_profile.py
tests/integration/: test_ai_engine.py  test_ai_engine_integration.py  test_auth.py  test_auth_integration.py  test_game_integration.py  test_game_management_integration.py  test_games.py  test_llm.py  test_llm_integration.py  test_llm_service.py  (+3 more)
(+20 files in other folders)
