[project]
name = "hagamesai"
version = "0.1.0"
description = "HAGAME AI Engine - An advanced game AI system"
authors = [{ name = "HAGAME Team", email = "team@hagame.ai" }]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "sqlalchemy>=1.4.23",
    "alembic>=1.7.1",
    "pydantic>=1.8.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.5",
    "numpy>=1.21.2",
    "scipy>=1.7.1",
    "scikit-learn>=0.24.2",
    "pandas>=1.3.2",
    "celery>=5.1.2",
    "redis>=3.5.3",
    "python-dotenv>=0.19.0",
    "structlog>=21.1.0",
    "psycopg2-binary>=2.9.1",
    "asyncpg>=0.24.0",
    "aiohttp>=3.7.4",
    "httpx>=0.18.2",
    "pyyaml>=6.0.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = ["pytest>=6.2.5", "pytest-asyncio>=0.15.1", "pytest-cov>=2.12.1", "httpx>=0.18.2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
